--- a/Mirko/Mirko.Shared/Controls/SuggestionsPopupContent.xaml
+++ b/Mirko/Mirko.Shared/Controls/SuggestionsPopupContent.xaml
@@ -2,14 +2,13 @@
     x:Class="Mirko.Controls.SuggestionsPopupContent"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:AutoCompletingTextBoxTest"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">   
-    
-    <Border Height="66"
+    d:DesignWidth="400">
+
+    <Border Height="{StaticResource SuggestionsPopupContentHeight}"
             Background="{ThemeResource SuggestionsPopupBackground}">
 
         <ListView x:Name="SuggestionsListView"
@@ -31,7 +30,7 @@
                     <TextBlock Text="{Binding}"
                                Margin="0,0,25,0"
                                Foreground="{ThemeResource SuggestionsPopupForeground}"
-                               FontSize="24"/>
+                               FontSize="{StaticResource SuggestionsPopupContentFontSize}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
